src/objects/Actualizacionderegistros__c.object
<CustomObject>
    <fields>
        <fullName>Campo_destino__c</fullName>
        <label>Campo destino</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campo_llave__c</fullName>
        <label>Campo llave</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campo_origen__c</fullName>
        <label>Campo origen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_externo__c</fullName>
        <label>Id externo origen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_externo_destino__c</fullName>
        <label>Id externo destino</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objeto_destino__c</fullName>
        <label>Objeto destino</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objeto_origen__c</fullName>
        <label>Objeto origen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>